test update page

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -6,7 +6,7 @@
 		<meta name="theme-color" content="hsl(256, 44%, 15%)" media="(prefers-color-scheme: dark)" />
 		<meta name="theme-color" content="hsl(273, 37%, 93%)" media="(prefers-color-scheme: light)" />
 
-		<title>Astro Docs Translation Status</title>
+		<title>Starlight Docs Translation Status</title>
 		<meta
 			name="description"
 			content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!"
@@ -215,7 +215,7 @@
 	<body>
 		<main>
 			<div class="limit-to-viewport">
-				<h1>Astro Docs Translation Status</h1>
+				<h1>Starlight Docs Translation Status</h1>
 
 				<p>
 					If you're interested in helping us translate
