Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -9,13 +9,13 @@
 
 	<title>Starlight Docs Translation Status</title>
 	<meta name="description"
-		content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!" />
-	<link rel="canonical" href="https://i18n.docs.astro.build/" />
-	<meta property="og:title" content="Astro Docs Translation Status" />
+		content="Translation progress tracker for the Starlight Docs site. See how much has been translated in your language and get involved!" />
+	<link rel="canonical" href="https://i18n.starlight.docs.astro.build/" />
+	<meta property="og:title" content="Starlight Docs Translation Status" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://i18n.docs.astro.build/" />
+	<meta property="og:url" content="https://i18n.starlight.docs.astro.build/" />
 	<meta property="og:description"
-		content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!" />
+		content="Translation progress tracker for the Starlight Docs site. See how much has been translated in your language and get involved!" />
 
 	<style>
 		:root {
