Tweak page styles & remove unused vars

--- a/docs-i18n-tracker/lib/translation-status/template.html
+++ b/docs-i18n-tracker/lib/translation-status/template.html
@@ -19,31 +19,18 @@
 
 	<style>
 		:root {
+			color-scheme: dark;
+
 			--font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
 				Apple Color Emoji, Segoe UI Emoji;
 			--font-body: system-ui, var(--font-fallback);
-			--font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
-				'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
-				'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
-			--theme-navbar-height: 6rem;
-			--theme-mobile-toc-height: 4rem;
-			--color-base-gray: 250, 14%;
-			--color-base-orange: 22, 100%;
-			--color-gray-90: var(--color-base-gray), 90%;
-			--color-orange: var(--color-base-orange), 60%;
-			--theme-accent: #bdc3ff;
-			--theme-bg: hsl(256, 27%, 19%);
-			--theme-bg-gradient-top: var(--theme-bg);
-			--theme-bg-gradient-bottom: hsl(251, 29%, 11%);
-			--theme-bg-gradient: linear-gradient(180deg,
-					var(--theme-bg-gradient-top),
-					var(--theme-bg-gradient-top) calc(var(--theme-navbar-height) + var(--theme-mobile-toc-height)),
-					var(--theme-bg-gradient-bottom));
+			--theme-accent: hsl(234, 100%, 87%);
+			--theme-bg: hsl(223, 13%, 10%);
 			--theme-table-header: hsl(252, 34%, 25%);
 			--theme-table-border: 1px solid hsl(252, 34%, 37%);
 			--theme-table-hover: hsla(252, 34%, 25%, 0.5);
-			--theme-text: hsla(var(--color-gray-90), 1);
-			color-scheme: dark;
+			--theme-text: hsl(228, 8%, 77%);
+			--theme-text-bright: hsl(0, 0%, 100%);
 			--purple-hsl: 255, 60%, 60%;
 			--overlay-blurple: hsla(var(--purple-hsl), .2);
 		}
@@ -63,11 +50,12 @@
 			line-height: 1.5;
 			margin-block: 2rem;
 			margin-inline: 1rem;
-			background-color: #16181d !important;
+			background-color: var(--theme-bg);
 			background: linear-gradient(215deg, var(--overlay-blurple), transparent 40%), radial-gradient(var(--overlay-blurple), transparent 40%) no-repeat -60vw -40vh / 105vw 200vh, radial-gradient(var(--overlay-blurple), transparent 65%) no-repeat 50% calc(100% + 20rem) / 60rem 30rem;
 		}
 
 		:is(h1, h2, h3, h4, h5, h6) {
+			color: var(--theme-text-bright);
 			margin-bottom: 1rem;
 			font-weight: bold;
 			line-height: 1.3;
