--- a/docs-i18n-tracker/lib/translation-status/template.html
+++ b/docs-i18n-tracker/lib/translation-status/template.html
@@ -245,6 +245,11 @@
 				content that could use your help right now.
 			</p>
 
+			<p>
+				Before starting a new translation, be sure to check the 
+				<a href="https://github.com/withastro/starlight/pulls">existing Starlight PRs</a> to see if this page has already been translated, and consider reviewing any open PRs in your language!
+			</p>
+
 			<h2 id="by-language">
 				<a href="#by-language">Translation progress by language</a>
 			</h2>
