Link to PRs needing reviews

--- a/docs-i18n-tracker/lib/translation-status/template.html
+++ b/docs-i18n-tracker/lib/translation-status/template.html
@@ -247,7 +247,7 @@
 
 			<p>
 				Before starting a new translation, be sure to check the 
-				<a href="https://github.com/withastro/starlight/pulls">existing Starlight PRs</a> to see if this page has already been translated, and consider reviewing any open PRs in your language!
+				<a href="#needs-review">existing Starlight PRs</a> to see if this page has already been translated, and consider reviewing any open PRs in your language!
 			</p>
 
 			<h2 id="by-language">
